Fix dark mode bug where wrong colors were used for blockquotes in HTML mail preview (#9820)

--- a/skins/elastic/styles/dark.less
+++ b/skins/elastic/styles/dark.less
@@ -788,8 +788,7 @@ html.dark-mode {
     // Mail preview
     // ---------------------------------
 
-    .message-part,
-    .message-htmlpart {
+    .message-part {
         border-color: @color-dark-border;
 
         blockquote {
@@ -813,9 +812,7 @@ html.dark-mode {
                 }
             }
         }
-    }
 
-    .message-part {
         span.sig {
             color: @color-dark-hint;
         }
